- created dto objects to deserialize the api responst - added decimal formatting in html - created custom format to deserialize the DateTime value from api response